更新內容與一張圖的路徑

--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -220,12 +220,8 @@
                                 </tr>
                                 <tr>
                                     <td align="center">認列範圍<span>消費限制</span></td>
-                                    <td align="center">無特殊限制</td>
-                                    <td>認列範圍：<br>
-                                    (1) 一般消費：通路線上/線下交易（我的條碼/掃描）。<br>
-                                    (2) 乘車碼：桃園捷運、公車、高雄捷運。<br>
-                                    (3) 生活繳費：水電費/停車費/瓦斯費/有線電視費等。
-                                    </td>
+                                    <td align="center">登記、消費、回饋<br>限同一張卡片</td>
+                                    <td align="center">僅認列一般消費：<br>通路線上/線下交易（我的條碼/掃描）</td>
                                     <td align="center">
                                         一般消費(<a href="#" target="_blank">詳定義</a>)及自動加值
                                     </td>
@@ -257,12 +253,12 @@
                                 </tr>
                                 <tr>
                                     <td width="25%" align="center">認列範圍<span>消費限制</span></td>
-                                    <td align="center">無特殊限制</td>
+                                    <td align="center">登記、消費、回饋<br>限同一張卡片</td>
                                 </tr>
                                 <tr>
                                     <td align="center">卡號位置</td>
                                     <td align="center">
-                                        <a href="images/image2.png" target="_blank"><img class="img-card-example" src="images/image2.png" width="100%"></a>
+                                        <a href="images/image2-0414.png" target="_blank"><img class="img-card-example" src="images/image2-0414.png" width="100%"></a>
                                     </td>
                                 </tr>
                                 <tr>
@@ -274,11 +270,7 @@
                                 </tr>
                                 <tr>
                                     <td align="center">認列範圍<span>消費限制</span></td>
-                                    <td>認列範圍：<br>
-                                        (1) 一般消費：通路線上/線下交易（我的條碼/掃描）。<br>
-                                        (2) 乘車碼：桃園捷運、公車、高雄捷運。<br>
-                                        (3) 生活繳費：水電費/停車費/瓦斯費/有線電視費等。
-                                    </td>
+                                    <td align="center">僅認列一般消費：<br>通路線上/線下交易（我的條碼/掃描）</td>
                                 </tr>
                                 <tr>
                                     <td align="center">卡號位置</td>
@@ -297,7 +289,7 @@
                                 <tr>
                                     <td align="center">認列範圍<span>消費限制</span></td>
                                     <td align="center">
-                                        <span class="text-remark">一般消費(<a href="#" target="_blank">詳定義</a>)及自動加值</span>
+                                        <span>一般消費(<a href="#" target="_blank">詳定義</a>)及自動加值</span>
                                     </td>
                                 </tr>
                                 <tr>
