--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -223,7 +223,7 @@
                                     <td align="center">登記、消費、回饋<br>限同一張卡片</td>
                                     <td align="center">僅認列一般消費：<br>通路線上/線下交易（我的條碼/掃描）</td>
                                     <td align="center">
-                                        一般消費(<a href="#" target="_blank">詳定義</a>)及自動加值
+                                        一般消費(<a href="https://card.firstbank.com.tw/sites/card/CardFaq" target="_blank">詳定義</a>)及自動加值
                                     </td>
                                 </tr>
                                 <tr>
@@ -289,7 +289,7 @@
                                 <tr>
                                     <td align="center">認列範圍<span>消費限制</span></td>
                                     <td align="center">
-                                        <span>一般消費(<a href="#" target="_blank">詳定義</a>)及自動加值</span>
+                                        <span>一般消費(<a href="https://card.firstbank.com.tw/sites/card/CardFaq" target="_blank">詳定義</a>)及自動加值</span>
                                     </td>
                                 </tr>
                                 <tr>
