女王節 - banner 切兩塊a

--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -108,9 +108,12 @@
                                 <img src="images/main-banner-0414.png" title="桃園市民卡－卡好女王節" width="100%">
                             </a>
                         </div>
-                        <div class="i-b">
-                            <a href="/app/register">
-                                <img src="images/main-banner-2.png" title="三大支付滿千送百，在地百貨滿兩千送兩百" width="100%">
+                        <div class="i-b clearfix">
+                            <a href="/app/act_card_register">
+                                <img src="images/main-banner-2-1.png" title="三大支付滿千送百" width="100%">
+                            </a>
+                            <a href="/mkt/events/d87ed60c-fdc2-410f-aec0-d779621dbd02">
+                                <img src="images/main-banner-2-2.png" title="在地百貨滿兩千送兩百" width="100%">
                             </a>
                         </div>
                     </div>
