--- a/iiot/taoyuang1000/linetaxi/index.html
+++ b/iiot/taoyuang1000/linetaxi/index.html
@@ -59,7 +59,7 @@
         <div class="pushy-content">
             <ul>
                 <li class="pushy-link">
-                    <a href="/lottery-202204.pdf">中獎名單下載</a>
+                    <a href="/lottery-taxi.pdf">中獎名單下載</a>
                 </li>
                 <li class="pushy-link">
                     <a class="go-section-01">活動辦法</a>
@@ -87,7 +87,7 @@
             </a>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="/lottery-202204.pdf">中獎名單下載</a></li>
+                    <li><a href="/lottery-taxi.pdf">中獎名單下載</a></li>
                     <li class="go-section-01">活動辦法</li>
                     <li><a href="/app/privacy">隱私權及安全政策</a></li>
                     <li><a href="/envelope">虎你好運抽紅包</a></li>
@@ -113,15 +113,23 @@
                 <section class="event-content">
                     <div class="card">
                         <div class="info" id="goThe01">
-                            <h5>安心乘車HAPPY購</h5>
+                            <br>
+                            <h5>《安心乘車HAPPY購》線上抽獎影片</h5>
                             <div class="video-box">
-                                <iframe width="560" height="315" src="https://www.youtube.com/embed/g4-gnVWLD2s" title="YouTube video player"
-                                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                        allowfullscreen></iframe>
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/QuDMUgd2fPk" title="YouTube video player"
+                                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
                             </div>
                             <h5>個人中獎查詢</h5>
                             <p>請點選以下按鈕前往，或查詢桃園市民卡LINE官方帳號(@tycc)查詢個人中獎紀錄。</p>
                             <a class="btn-record" href="/app/lottery">前往官方帳號查詢個人中獎紀錄</a>
+                            <h5>安心乘車HAPPY購</h5>
+                            <div class="video-box">
+                                <iframe width="560" height="315" src="https://www.youtube.com/embed/g4-gnVWLD2s" title="YouTube video player"
+                                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+                            </div>
+
                             <h5>活動期間</h5>
                             <p>截至3/31（四）23:59止，逾時恕不受理。</p>
 
