更新 - 女王節活動內容

--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -196,7 +196,10 @@
                             <h5>參加步驟</h5>
                             <ul class="list">
                                 <li>
-                                    <p>5月4日前，至<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊及活動登錄。</p>
+                                    <p>
+                                        4月18日（一）10:00 至5月4日（三）23:59
+                                        至<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊及<a href="https://taoyuan1000.tycg.gov.tw/app/act_card_register" target="_blank">活動登錄</a>（請點選文字前往相關頁面）。
+                                    </p>
                                 </li>
                                 <li>
                                     <p>公布名單後，即可於6月5日前使用桃園市民卡指定支付工具（悠遊卡、一卡通Money、第一銀行）進行消費，消費滿千元即會於七月底前獲得百元回饋金。</p>
@@ -209,8 +212,9 @@
                                     <th width="33%">消費期間</th>
                                     <th>消費回饋</th>
                                 </tr>
-                                <td align="center">4月18日（一）<br>至5月4日（三）</td>
-                                <td align="center">5月6日（五）<br>至6月5日（日）</td>
+                                <td align="center">4月18日（一）10:00<br>
+                                至 5月4日（三）23:59</td>
+                                <td align="center">5月6日（五）<br>至 6月5日（日）</td>
                                 <td align="center">七月底前</td>
                                 </tr>
                             </table>
@@ -223,10 +227,12 @@
                                 </tr>
                                 <tr>
                                     <td align="center">認列範圍<span>消費限制</span></td>
-                                    <td align="center">登記、消費、回饋<br>限同一張卡片</td>
-                                    <td align="center">僅認列一般消費：<br>通路線上/線下交易（我的條碼/掃描）</td>
+                                    <td align="center">僅認列一般消費（詳定義<a href="https://www.easycard.com.tw/use-range" target="_blank">1</a>、<a href="https://www.easycard.com.tw/new?cls=1&id=1508381388" target="_blank">2</a>）：
+                                    登記、消費、回饋，限同一張卡片</td>
+                                    <td align="center">僅認列一般消費（<a href="https://www.i-pass.com.tw/Page/AboutAccount" target="_blank">詳定義</a>）：
+                                    通路線上/線下交易（我的條碼/掃描）</td>
                                     <td align="center">
-                                        一般消費(<a href="https://card.firstbank.com.tw/sites/card/CardFaq" target="_blank">詳定義</a>)及自動加值
+                                        一般消費（<a href="https://card.firstbank.com.tw/sites/card/CardFaq" target="_blank">詳定義</a>）及自動加值
                                     </td>
                                 </tr>
                                 <tr>
@@ -256,7 +262,9 @@
                                 </tr>
                                 <tr>
                                     <td width="25%" align="center">認列範圍<span>消費限制</span></td>
-                                    <td align="center">登記、消費、回饋<br>限同一張卡片</td>
+                                    <td align="center">僅認列一般消費（詳定義<a href="https://www.easycard.com.tw/use-range" target="_blank">1</a>、<a
+                                            href="https://www.easycard.com.tw/new?cls=1&id=1508381388" target="_blank">2</a>）：<br>
+                                        登記、消費、回饋，限同一張卡片</td>
                                 </tr>
                                 <tr>
                                     <td align="center">卡號位置</td>
@@ -273,7 +281,8 @@
                                 </tr>
                                 <tr>
                                     <td align="center">認列範圍<span>消費限制</span></td>
-                                    <td align="center">僅認列一般消費：<br>通路線上/線下交易（我的條碼/掃描）</td>
+                                    <td align="center">僅認列一般消費（<a href="https://www.i-pass.com.tw/Page/AboutAccount" target="_blank">詳定義</a>）：<br>
+                                        通路線上/線下交易（我的條碼/掃描）</td>
                                 </tr>
                                 <tr>
                                     <td align="center">卡號位置</td>
