--- a/iiot/taoyuang1000/join-tycg/register.html
+++ b/iiot/taoyuang1000/join-tycg/register.html
@@ -69,6 +69,7 @@
                     <fieldset class="field">
                         <div class="bg-field for-id clearfix">
                             <div class="r-input">
+                                <p class="text-must">*必填</p>
                                 <input type="text" id="" placeholder="身分證字號 / 居留證號 / 護照號碼" required="required">
                             </div>
                         </div>
@@ -76,6 +77,7 @@
                     <fieldset class="field">
                         <div class="bg-field for-phone clearfix">
                             <div class="r-input">
+                                <p class="text-must">*必填</p>
                                 <input type="text" id="" placeholder="手機號碼" required="required">
                             </div>
                         </div>
@@ -96,7 +98,7 @@
                         </div>
                     </fieldset>
                 </form>
-                <button class="btn-default">完成註冊</button>
+                <button class="btn-default btn-disabled">完成註冊</button>
             </section>
         </main>
     </body>
