taxi活動頁 - 增加子選單，修改內容
1.logo更新連結
2.PC版增加子選單
3.修改兌換流程 - 台灣大車隊的內容

--- a/iiot/taoyuang1000/linetaxi/index.html
+++ b/iiot/taoyuang1000/linetaxi/index.html
@@ -68,7 +68,13 @@
                     <a href="/app/privacy">隱私權及安全政策</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="/envelope">虎你好運抽紅包</a>
+                    <a href="https://taoyuan1000.tycg.gov.tw">卡好女王節</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="https://taoyuan1000.tycg.gov.tw/envelope">虎你好運抽紅包</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="https://taoyuan1000.tycg.gov.tw/taxi">安心乘車HAPPY購</a>
                 </li>
                 <li class="pushy-link">
                     <a href="/app/register">會員登入/註冊</a>
@@ -82,15 +88,34 @@
         <!-- header -->
         <header class="header-container clearfix">
             <button class="menu-btn"><span><i class="fas fa-bars"></i></span></button>
-            <a class="logo" href="https://www.tycg.gov.tw/" target="_blank">
+            <a class="logo" href="https://taoyuan1000.tycg.gov.tw/" target="_blank">
                 <h2>桃園市政府</h2>
             </a>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="/lottery-taxi.pdf">中獎名單下載</a></li>
-                    <li class="go-section-01">活動辦法</li>
-                    <li><a href="/app/privacy">隱私權及安全政策</a></li>
-                    <li><a href="/envelope">虎你好運抽紅包</a></li>
+                    <li>
+                        <a href="/lottery-taxi.pdf">中獎名單下載</a>
+                    </li>
+                    <li class="go-section-01">
+                        <a>活動辦法</a>
+                    </li>
+                    <li>
+                        <a href="/app/privacy">隱私權及安全政策</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="title">各項活動</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="https://taoyuan1000.tycg.gov.tw">卡好女王節</a>
+                            </li>
+                            <li>
+                                <a href="https://taoyuan1000.tycg.gov.tw/envelope">虎你好運抽紅包</a>
+                            </li>
+                            <li>
+                                <a href="https://taoyuan1000.tycg.gov.tw/taxi">安心乘車HAPPY購</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li><a href="/app/register">會員登入/註冊</a></li>
                 </ul>
             </nav>
@@ -208,7 +233,7 @@
                                 </li>
                                 <li>
                                     <p>中獎人經訊息通知後，依照下列說明及指示操作，即可獲得「LINE TAXI」數位乘車券或「台灣大車隊55688」搭車金。<br>
-                                    台灣大車隊： 於「台灣大車隊55688」APP，點選「我的」進入「優惠碼」功能，輸入指定優惠碼並按下「領取」鍵。<br>
+                                    台灣大車隊：「台灣大車隊55688」APP新用戶，請於2022.6.30前，至APP內點選「我的」進入「優惠碼」功能，輸入指定優惠碼並按下「領取」鍵。<br>
                                     LINE TAXI：於「LINE TAXI」聊天室，點選「會員中心」進入「輸入優惠序號」功能，輸入指定優惠碼並按下箭頭符號。</p>
                                 </li>
                                 <li>
