虎你好運抽紅包 - 增加子選單&更新logo連結
1.logo更新連結
2.PC版增加子選單

--- a/iiot/taoyuang1000/event/index.html
+++ b/iiot/taoyuang1000/event/index.html
@@ -68,7 +68,13 @@
                     <a href="/app/privacy">隱私權及安全政策</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="/index.html">安心乘車HAPPY購</a>
+                    <a href="https://taoyuan1000.tycg.gov.tw">卡好女王節</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="https://taoyuan1000.tycg.gov.tw/envelope">虎你好運抽紅包</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="https://taoyuan1000.tycg.gov.tw/taxi">安心乘車HAPPY購</a>
                 </li>
                 <li class="pushy-link">
                     <a href="/app/register">會員登入/註冊</a>
@@ -82,15 +88,32 @@
         <!-- header -->
         <header class="header-container clearfix">
             <button class="menu-btn"><span><i class="fas fa-bars"></i></span></button>
-            <a class="logo" href="https://www.tycg.gov.tw/" target="_blank">
+            <a class="logo" href="https://taoyuan1000.tycg.gov.tw/" target="_blank">
                 <h2>桃園市政府</h2>
             </a>
             <nav class="nav-menu">
                 <ul>
                     <li><a href="/lottery-202202.pdf">中獎名單下載</a></li>
-                    <li class="go-section-01">活動辦法</li>
-                    <li><a href="/app/privacy">隱私權及安全政策</a></li>
-                    <li><a href="/index.html">安心乘車HAPPY購</a></li>
+                    <li class="go-section-01">
+                        <a>活動辦法</a>
+                    </li>
+                    <li>
+                        <a href="/app/privacy">隱私權及安全政策</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="title">各項活動</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="https://taoyuan1000.tycg.gov.tw">卡好女王節</a>
+                            </li>
+                            <li>
+                                <a href="https://taoyuan1000.tycg.gov.tw/envelope">虎你好運抽紅包</a>
+                            </li>
+                            <li>
+                                <a href="https://taoyuan1000.tycg.gov.tw/taxi">安心乘車HAPPY購</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li><a href="/app/register">會員登入/註冊</a></li>
                 </ul>
             </nav>
