女王節活動內容更新（4/15雲端檔案）
依據內容調整:https://docs.google.com/presentation/d/1-4EyyUUHH2L7gL8QH7QJbM0ndfwE3aYz/edit#slide=id.g12495e670be_0_0

--- a/iiot/taoyuang1000/queen/date-01.html
+++ b/iiot/taoyuang1000/queen/date-01.html
@@ -73,7 +73,7 @@
         <!-- header -->
         <header class="header-container clearfix">
             <button class="menu-btn"><span><i class="fas fa-bars"></i></span></button>
-            <a class="logo" href="https://www.tycg.gov.tw/" target="_blank">
+            <a class="logo" href="https://taoyuan1000.tycg.gov.tw/" target="_blank">
                 <h2>桃園市政府</h2>
             </a>
             <nav class="nav-menu">
@@ -92,8 +92,8 @@
                                 <img src="images/main-banner-0414.png" title="桃園市民卡－卡好女王節" width="100%">
                             </a>
                         </div>
-                        <div class="i-b">
-                            <a href="/app/register">
+                        <div class="i-c">
+                            <a href="https://taoyuan1000.tycg.gov.tw/mkt/events/ecd33748-6d3c-431d-8324-07e36dcbd09e">
                                 <img src="images/main-banner-3.png" title="滿兩千送兩百 再送來店禮" width="100%">
                             </a>
                         </div>
@@ -125,22 +125,25 @@
                                 <td class="info">
                                     <ul class="list">
                                         <li>
-                                            <p>桃園市民於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
+                                            <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示當日消費滿2,000元發票，即可掃描現場QRCODE，領取百貨禮券200元（每館限量100份，送完為止）。</p>
+                                            <p>服務台出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面
+                                            即可掃描現場QRCODE領取百貨禮券200元（每館限量100份，送完為止）</p>
                                         </li>
                                     </ul>
+                                    <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
                                 </td>
                                 <td class="info">
                                     <ul class="list">
                                         <li>
-                                            <p>桃園市民於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
+                                            <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示「註冊/登錄」頁面，即可兌換口袋隨行杯（每館限量30份，送完為止）。</p>
+                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面，即可掃描現場QRCODE，兌換口袋隨行杯（每館限量30份，送完為止）。</p>
                                         </li>
                                     </ul>
+                                    <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
                                 </td>
                             </tr>
                         </table>
@@ -153,13 +156,16 @@
                                 <td class="info">
                                     <ul class="list">
                                         <li>
-                                            <p>桃園市民於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl"
+                                            <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl"
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示當日消費滿2,000元發票，即可掃描現場QRCODE，領取百貨禮券200元（每館限量100份，送完為止）。</p>
+                                            <p>服務台出示當日消費滿2,000元發票（當日累積）及市民卡LINE「註冊/登錄」頁面
+                                                即可掃描現場QRCODE領取百貨禮券200元（每館限量100份，送完為止）</p>
+                                            
                                         </li>
                                     </ul>
+                                    <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
                                 </td>
                             </tr>
                             <tr>
@@ -169,13 +175,14 @@
                                 <td class="info">
                                     <ul class="list">
                                         <li>
-                                            <p>桃園市民於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl"
+                                            <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl"
                                                     target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
                                         </li>
                                         <li>
-                                            <p>服務台出示「註冊/登錄」頁面，即可兌換口袋隨行杯（每館限量30份，送完為止）。</p>
+                                            <p>服務台出示桃園市民卡LINE官方帳號「註冊/登錄」頁面，即可掃描現場QRCODE，兌換口袋隨行杯（每館限量30份，送完為止）。</p>
                                         </li>
                                     </ul>
+                                    <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
                                 </td>
                             </tr>
                         </table>
@@ -272,7 +279,7 @@
                                     </div>
                                 </li>
                             </ul>
-                            <p>2022/6/31前至旗下品牌出示桃園市民卡卡片或LINE官方帳號「註冊/登錄」頁面，即享下列優惠：</p>
+                            <p>2022/6/30前至旗下品牌出示桃園市民卡卡片或LINE官方帳號「註冊/登錄」頁面，即享下列優惠：</p>
                             <h5>【桃園春日館】</h5>
                             <ul class="list">
                                 <li>
@@ -294,7 +301,7 @@
                                     <p>旺旺虎－消費指定商品即享9折優惠</p>
                                 </li>
                                 <li>
-                                    <p>TOY WOTLD－消費即享9折優惠</p>
+                                    <p>TOY WORLD－消費即享9折優惠</p>
                                 </li>
                                 <li>
                                     <p>寵物公園－消費即領取寵物試吃包一份</p>
@@ -309,7 +316,7 @@
                                     <p>JINS－消費眼鏡或墨鏡即享9折優惠（特價品除外，不與其他折扣優惠併用）</p>
                                 </li>
                                 <li>
-                                    <p>露易莎－消費咖啡飲品即享9折優惠（非手沖咖啡）</p>
+                                    <p>路易莎－消費咖啡飲品即享9折優惠（非手沖咖啡）</p>
                                 </li>
                                 <li>
                                     <p>叁和院－消費滿1,000元即贈100元商品券，生日當月加倍送（折扣與贈券優惠不併用）</p>
@@ -318,7 +325,7 @@
                                     <p>金大鋤－消費即享95折優惠（一張卡限一位，服務費另計）</p>
                                 </li>
                                 <li>
-                                    <p>勝博殿－消費兩份套餐即享薩摩炸魚版乙份（價值130元；限內用，不含兒童餐，不與其他優惠併用）</p>
+                                    <p>勝博殿－消費兩份套餐即享薩摩炸魚板乙份（價值130元；限內用，不含兒童餐，不與其他優惠併用）</p>
                                 </li>
                                 <li>
                                     <p>魔法咖哩－消費即贈當日飲品或甜點乙份（不得與其他優惠併用）</p>
