--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -58,9 +58,6 @@
     <nav class="pushy pushy-left" data-focus="#first-link">
         <div class="pushy-content">
             <ul>
-                <!-- <li class="pushy-link">
-                    <a href="#">中獎名單下載</a>
-                </li> -->
                 <li class="pushy-link">
                     <a class="go-section-01">活動辦法</a>
                 </li>
@@ -68,10 +65,13 @@
                     <a href="/app/privacy">隱私權及安全政策</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="/envelope">虎你好運抽紅包</a>
+                    <a href="https://taoyuan1000.tycg.gov.tw">卡好女王節</a>
                 </li>
                 <li class="pushy-link">
-                    <a href="/taxi">安心乘車HAPPY購</a>
+                    <a href="https://taoyuan1000.tycg.gov.tw/envelope">虎你好運抽紅包</a>
+                </li>
+                <li class="pushy-link">
+                    <a href="https://taoyuan1000.tycg.gov.tw/taxi">安心乘車HAPPY購</a>
                 </li>
                 <li class="pushy-link">
                     <a href="/app/register">會員登入/註冊</a>
@@ -85,16 +85,31 @@
         <!-- header -->
         <header class="header-container clearfix">
             <button class="menu-btn"><span><i class="fas fa-bars"></i></span></button>
-            <a class="logo" href="https://www.tycg.gov.tw/" target="_blank">
+            <a class="logo" href="https://taoyuan1000.tycg.gov.tw/" target="_blank">
                 <h2>桃園市政府</h2>
             </a>
             <nav class="nav-menu">
                 <ul>
-                    <!-- <li><a href="#">中獎名單下載</a></li> -->
-                    <li class="go-section-01">活動辦法</li>
-                    <li><a href="/app/privacy">隱私權及安全政策</a></li>
-                    <li><a href="/envelope">虎你好運抽紅包</a></li>
-                    <li><a href="/taxi">安心乘車HAPPY購</a></li>
+                    <li class="go-section-01">
+                        <a>活動辦法</a>
+                    </li>
+                    <li>
+                        <a href="/app/privacy">隱私權及安全政策</a>
+                    </li>
+                    <li class="dropdown">
+                        <a class="title">各項活動</a>
+                        <ul class="sub-menu">
+                            <li>
+                                <a href="https://taoyuan1000.tycg.gov.tw">卡好女王節</a>
+                            </li>
+                            <li>
+                                <a href="https://taoyuan1000.tycg.gov.tw/envelope">虎你好運抽紅包</a>
+                            </li>
+                            <li>
+                                <a href="https://taoyuan1000.tycg.gov.tw/taxi">安心乘車HAPPY購</a>
+                            </li>
+                        </ul>
+                    </li>
                     <li><a href="/app/register">會員登入/註冊</a></li>
                 </ul>
             </nav>
@@ -116,6 +131,11 @@
                                 <img src="images/main-banner-2-2.png" title="在地百貨滿兩千送兩百" width="100%">
                             </a>
                         </div>
+                        <div class="i-c i-d">
+                            <a>
+                                <img src="images/main-banner-300.png" title="登記註冊 + 消費滿兩千 回饋最高享300元" width="100%">
+                            </a>
+                        </div>
                     </div>
                 </section>
                 <section class="event-content" id="goThe01">
@@ -130,7 +150,7 @@
                                 <p>111年4月18日（一）至6月5日（日）23:59止，逾時恕不受理。</p>
                                 <h5>活動簡介</h5>
                                 <p>歡慶母親節，市民卡要讓你買得優惠、買得愉快，盡情寵愛自己！
-                                回饋總價值高達720萬的悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，只要於4/8－5/4至市民卡官方LINE註冊、登錄，即有機會抽中回饋名額（共計72,000名）。百貨接力送好禮，6/5前至指定百貨出示市民卡官方LINE，兌換品牌折扣或來店禮，憑消費2,000元發票，再送200元百貨禮券！</p>
+                                回饋總價值高達720萬的悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，只要於4/18－5/4至市民卡官方LINE註冊、登錄，即有機會抽中回饋名額（共計72,000名）。百貨接力送好禮，6/5前至指定百貨出示市民卡官方LINE，兌換品牌折扣或來店禮，憑消費2,000元發票，再送200元百貨禮券！</p>
                             </div>
                         </div>
                     </div>
