女王節 - banner更新+新增攻略
1.更新兩塊banner
2.下方新增攻略圖(pc+mob)

--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -125,17 +125,17 @@
                         </div>
                         <div class="i-b clearfix">
                             <a href="/app/act_card_register">
-                                <img src="images/main-banner-2-1.png" title="三大支付滿千送百" width="100%">
+                                <img src="images/main-banner-2-1-0418.png" title="三大支付 滿千送百總獎金720萬" width="100%">
                             </a>
                             <a href="/mkt/events/d87ed60c-fdc2-410f-aec0-d779621dbd02">
-                                <img src="images/main-banner-2-2.png" title="在地百貨滿兩千送兩百" width="100%">
+                                <img src="images/main-banner-2-2-0418.png" title="在地百貨 限時限量 滿兩千送兩百再送來店禮" width="100%">
                             </a>
                         </div>
-                        <div class="i-c i-d">
+                        <!-- <div class="i-c i-d">
                             <a>
                                 <img src="images/main-banner-300.png" title="登記註冊 + 消費滿兩千 回饋最高享300元" width="100%">
                             </a>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
                 <section class="event-content" id="goThe01">
@@ -152,6 +152,17 @@
                                 <p>歡慶母親節，市民卡要讓你買得優惠、買得愉快，盡情寵愛自己！
                                 回饋總價值高達720萬的悠遊卡、一卡通MONEY、第一銀行「消費滿千送百」活動，只要於4/18－5/4至市民卡官方LINE註冊、登錄，即有機會抽中回饋名額（共計72,000名）。百貨接力送好禮，6/5前至指定百貨出示市民卡官方LINE，兌換品牌折扣或來店禮，憑消費2,000元發票，再送200元百貨禮券！</p>
                             </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3 class="sub-title">
+                            <span class="bg-pink">成為卡好女王小攻略</span>
+                        </h3>
+                        <div class="pc-show">
+                            <img src="images/banner-raiders.png" title="成為卡好女王小攻略" width="100%">
+                        </div>
+                        <div class="mob-show">
+                            <img src="images/banner-raiders-mob.png" title="成為卡好女王小攻略" width="100%">
                         </div>
                     </div>
                     <div class="card">
