女王節 - 一卡通Money改大寫

--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -233,7 +233,7 @@
                                     </p>
                                 </li>
                                 <li>
-                                    <p>公布名單後，即可於6月5日前使用桃園市民卡指定支付工具（悠遊卡、一卡通Money、第一銀行）進行消費，消費滿千元即會於七月底前獲得百元回饋金。</p>
+                                    <p>公布名單後，即可於6月5日前使用桃園市民卡指定支付工具（悠遊卡、一卡通MONEY、第一銀行）進行消費，消費滿千元即會於七月底前獲得百元回饋金。</p>
                                 </li>
                             </ul>
                             <h5>活動時程</h5>
@@ -253,7 +253,7 @@
                                 <tr>
                                     <th>支付業者</th>
                                     <th width="29%">悠遊卡<span>（電子票證）</span></th>
-                                    <th width="29%">一卡通Money<span>（線上支付）</span></th>
+                                    <th width="29%">一卡通MONEY<span>（線上支付）</span></th>
                                     <th width="29%">第一銀行<span>（信用卡）</span></th>
                                 </tr>
                                 <tr>
@@ -308,7 +308,7 @@
                                     <td align="center">02-412-8880</td>
                                 </tr>
                                 <tr>
-                                    <th colspan="2">一卡通Money（線上支付）</th>
+                                    <th colspan="2">一卡通MONEY（線上支付）</th>
                                 </tr>
                                 <tr>
                                     <td align="center">認列範圍<span>消費限制</span></td>
