TAXI活動頁 - 修改內容

--- a/iiot/taoyuang1000/linetaxi/index.html
+++ b/iiot/taoyuang1000/linetaxi/index.html
@@ -168,7 +168,7 @@
                                         <td>獎項內容：<br>
                                         台灣大車隊－50元搭車金（10,000名）<br>
                                         LINE TAXI－50元乘車券（10,000名）<br>
-                                        <span class="text-remark">獎項限於桃園地區使用。</span>
+                                        <span class="text-remark">獎項限新戶及桃園地區使用。</span>
                                         <br>
                                         <br>
                                         參加條件：<br>加入<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>，完成註冊者。<br>
@@ -233,8 +233,8 @@
                                 </li>
                                 <li>
                                     <p>中獎人經訊息通知後，依照下列說明及指示操作，即可獲得「LINE TAXI」數位乘車券或「台灣大車隊55688」搭車金。<br>
-                                    台灣大車隊：「台灣大車隊55688」APP新用戶，請於2022.6.30前，至APP內點選「我的」進入「優惠碼」功能，輸入指定優惠碼並按下「領取」鍵。<br>
-                                    LINE TAXI：於「LINE TAXI」聊天室，點選「會員中心」進入「輸入優惠序號」功能，輸入指定優惠碼並按下箭頭符號。</p>
+                                    台灣大車隊：請於2022.6.30前至「台灣大車隊55688」APP內點選「我的」進入「優惠碼」功能，輸入指定優惠碼並按下「領取」鍵。「50元搭車金」限新戶領取、使用，「30天100元搭車金」不限制。<br>
+                                    LINE TAXI：請於2022.6.30前至「LINE TAXI」LINE聊天室，點選「會員中心」進入「輸入優惠序號」功能，輸入指定優惠碼並按下箭頭符號。「50元乘車券」限新戶領取、使用，「30天100元搭車券」不限制。</p>
                                 </li>
                                 <li>
                                     <p>本活動兌獎期限依實際顯示日期為主；逾期未領者將視為自動放棄資格。</p>
