--- a/iiot/taoyuang1000/queen/date-01.html
+++ b/iiot/taoyuang1000/queen/date-01.html
@@ -93,7 +93,7 @@
                             </a>
                         </div>
                         <div class="i-c">
-                            <a href="https://taoyuan1000.tycg.gov.tw/mkt/events/ecd33748-6d3c-431d-8324-07e36dcbd09e">
+                            <a href="https://bit.ly/3JRm0a">
                                 <img src="images/main-banner-3.png" title="滿兩千送兩百 再送來店禮" width="100%">
                             </a>
                         </div>
@@ -135,6 +135,9 @@
                                     <p class="text-remark">※ 兌換按鈕請交由工作人員進行點選，請勿自行操作，以免喪失權益。</p>
                                 </td>
                                 <td class="info">
+                                    <div class="finish">
+                                        <img src="images/img-finish.png" alt="已兌完">
+                                    </div>
                                     <ul class="list">
                                         <li>
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl" target="_blank">桃園市民卡LINE官方帳號</a>完成註冊。</p>
@@ -173,6 +176,9 @@
                             </tr>
                             <tr>
                                 <td class="info">
+                                    <div class="finish">
+                                        <img src="images/img-finish.png" alt="已兌完">
+                                    </div>
                                     <ul class="list">
                                         <li>
                                             <p>於<a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=497jygbl"
