--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -127,7 +127,7 @@
                             <a href="/app/act_card_register">
                                 <img src="images/main-banner-2-1-0418.png" title="三大支付 滿千送百總獎金720萬" width="100%">
                             </a>
-                            <a href="/mkt/events/d87ed60c-fdc2-410f-aec0-d779621dbd02">
+                            <a href="https://bit.ly/3JRm0a">
                                 <img src="images/main-banner-2-2-0418.png" title="在地百貨 限時限量 滿兩千送兩百再送來店禮" width="100%">
                             </a>
                         </div>
