女王節 - EE這 更新錯誤連結

--- a/iiot/taoyuang1000/queen/date-01.html
+++ b/iiot/taoyuang1000/queen/date-01.html
@@ -93,7 +93,7 @@
                             </a>
                         </div>
                         <div class="i-c">
-                            <a href="https://bit.ly/3JRm0a">
+                            <a href="https://bit.ly/3JRm0ae">
                                 <img src="images/main-banner-3.png" title="滿兩千送兩百 再送來店禮" width="100%">
                             </a>
                         </div>
