4/20 女王節活動頁內容更新 - 新增date-02頁面
1.主頁banner修改 + 新增步驟圖
2.新增date-02.html

--- a/iiot/taoyuang1000/queen/index.html
+++ b/iiot/taoyuang1000/queen/index.html
@@ -178,32 +178,32 @@
                                 <p>JC PARK食尚廣場</p>
                             </li>
                             <li>
+                                <a class="store-photo" href="date-02.html" target="_blank">
+                                    <img src="images/img_store_02.png" alt="Global Mall 環球購物中心 A19">
+                                </a>
+                                <p>Global Mall 環球購物中心 A19</p>
+                            </li>
+                            <li>
                                 <a class="store-photo" target="_blank">
-                                    <img src="images/img_store_commingsoon.png" alt="新光三越桃園 站前店">
+                                    <img src="images/img_store_03.png" alt="Global Mall環球購物中心A8">
                                 </a>
                                 <p>comming soon...</p>
                             </li>
                             <li>
                                 <a class="store-photo" target="_blank">
-                                    <img src="images/img_store_commingsoon.png" alt="Global Mall環球購物中心A8">
+                                    <img src="images/img_store_04.png" alt="遠東百貨 桃園店">
                                 </a>
                                 <p>comming soon...</p>
                             </li>
                             <li>
                                 <a class="store-photo" target="_blank">
-                                    <img src="images/img_store_commingsoon.png" alt="遠東百貨 桃園店">
-                                </a>
-                                <p>comming soon...</p>
-                            </li>
-                            <li>
-                                <a class="store-photo" target="_blank">
-                                    <img src="images/img_store_commingsoon.png" alt="遠東SOGO百貨 中壢店">
+                                    <img src="images/img_store_05.png" alt="遠東SOGO百貨 中壢店">
                                 </a>
                                 <p>comming soon...</p> 
                             </li>
                             <li>
                                 <a class="store-photo" target="_blank">
-                                    <img src="images/img_store_commingsoon.png" alt="遠東SOGO百貨 中壢店">
+                                    <img src="images/img_store_06.png" alt="遠東SOGO百貨 中壢店">
                                 </a>
                                 <p>comming soon...</p>
                             </li>
@@ -236,6 +236,25 @@
                                     <p>公布名單後，即可於6月5日前使用桃園市民卡指定支付工具（悠遊卡、一卡通MONEY、第一銀行）進行消費，消費滿千元即會於七月底前獲得百元回饋金。</p>
                                 </li>
                             </ul>
+                            <div class="step-box">
+                                <ul class="clearfix">
+                                    <li class="top-title">
+                                        <img src="images/step-title.png" alt="如何綁定抽滿千送百">
+                                    </li>
+                                    <li>
+                                        <img src="images/step1.png" alt="掃 QRcode 加官方 line">
+                                    </li>
+                                    <li>
+                                        <img src="images/step2.png" alt="填註冊資料">
+                                    </li>
+                                    <li>
+                                        <img src="images/step3.png" alt="綁定市民卡片">
+                                    </li>
+                                    <li>
+                                        <img src="images/step4.png" alt="抽滿千送百">
+                                    </li>
+                                </ul>
+                            </div>
                             <h5>活動時程</h5>
                             <table class="table-style" border="0" cellpadding="0" cellspacing="0">
                                 <tr>
@@ -253,7 +272,7 @@
                                 <tr>
                                     <th>支付業者</th>
                                     <th width="29%">悠遊卡<span>（電子票證）</span></th>
-                                    <th width="29%">一卡通MONEY<span>（線上支付）</span></th>
+                                    <th width="29%">一卡通MONEY<span>（電子支付）</span></th>
                                     <th width="29%">第一銀行<span>（信用卡）</span></th>
                                 </tr>
                                 <tr>
@@ -308,7 +327,7 @@
                                     <td align="center">02-412-8880</td>
                                 </tr>
                                 <tr>
-                                    <th colspan="2">一卡通MONEY（線上支付）</th>
+                                    <th colspan="2">一卡通MONEY（電子支付）</th>
                                 </tr>
                                 <tr>
                                     <td align="center">認列範圍<span>消費限制</span></td>
